# gtm-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.server  HANDOVER.md  README.md  pyproject.toml  requirements-server.txt
.claude/: launch.json  settings.json
.claude/commands/: verify-plan.md
.claude/hooks/: verify-plan.sh
.claude/rules/: enrichment.md  security.md
.github/workflows/: code-quality-tests.yml  deployment-k8s-staging.yml
docs/: DEPLOYMENT.md  architecture.md  end_user_cli_flow.md  mcp_registration_bug.md
docs/deployment_tasks/: 00_INDEX.md  01_auth_state_to_redis.md  04_cors_allowed_origins.md  05_update_default_server_url.md  06_update_dockerfile.md  07_schema_migrations_tracking.md  08_create_helm_chart.md  09_provision_infrastructure.md  10_first_deploy_and_verify.md  11_environment_management.md  CHECKLIST.md
migrations/: 000_schema_migrations.sql  004_workflow_label.sql  005_datasets.sql  006_scheduled_workflows.sql  009_scripts.sql  013_user_attribution.sql  014_key_label.sql  015_refresh_tokens_subject_id.sql  016_operation_costs.sql  017_cascade_scripts_learning_logs.sql  018_fresh_linkedin_operation_costs.sql  prod_combined_001_008_015.sql  prod_combined_001_016.sql  prod_combined_018_019.sql
scripts/: probe_fresh_linkedin_apis.py  probe_rocketreach_universal_apis.py  probe_search_posts.py  publish_pypi.sh  test_fresh_linkedin_cli.py  test_parallel_endpoints.py
server/: app.py
tests/: test_auth_exchange_endpoint.py  test_auth_token_persistence.py  test_byok_channel_gating.py  test_cli_browser_auth.py  test_console_auth_via_um.py  test_cost_estimate.py  test_platform_access_service.py  test_platform_credit_service.py  test_rocketreach_provider.py  test_service_token_auth.py  test_tenant_endpoints.py
(+198 files in other folders)
