[build-system]
requires = ["hatchling>=1.6"]
build-backend = "hatchling.build"

[project]
name = "nrev-lite"
version = "2.0.0"
description = "nrev-lite — agent-native GTM execution platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "nRev", email = "eng@nrev.ai"},
]
keywords = ["gtm", "enrichment", "sales", "claude", "mcp", "agent", "go-to-market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.3.0",
]
all = ["nrev-lite[dev]"]

[project.scripts]
nrev-lite = "nrev_lite.cli.main:cli"

[project.urls]
Homepage = "https://nrev.ai"
Repository = "https://github.com/nurturev/gtm-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/nrev_lite"]

[tool.hatch.build.force-include]
".claude/skills" = "src/nrev_lite/resources/claude_assets/skills"
".claude/rules" = "src/nrev_lite/resources/claude_assets/rules"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
